[tool.poetry]
name = "VersoriumX_ArtistX"
version = "0.1.0"
description = "A brief description of my project."
authors = ["Javaweh <you@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/VersoriumX/ArtistX"
repository = "https://github.com/VersoriumX/ArtistX"
keywords = ["Crypto", "Music", "python"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
numpy = "^1.21.0"
pandas = { version = "^1.3.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.5b1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my_script = "ArtistX.module:main_function"

[tool.poetry.source]
name = "VersoriumX-ArtistX"
url = "https://ArtistX.com/simple/"

[tool.black]
line-length = 88
target-version = ["py38"]
skip-string-normalization = true

[tool.mypy]
files = "ArtistX"
ignore_missing_imports = true
