[tool.poetry]
name = "VersoriumX_ArtistX"
version = "0.1.0"
description = "A brief description of my project."
authors = ["Javaweh <you@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/VersoriumX/ArtistX"
repository = "https://github.com/VersoriumX/ArtistX"
keywords = ["Crypto", "Music", "python"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
numpy = "^1.21.0"
pandas = { version = "^1.3.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^24.3.0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my_script = "ArtistX.module:main_function"

[tool.poetry.source]
name = "VersoriumX-ArtistX"
url = "https://ArtistX.com/simple/"

[tool.black]
line-length = 88  # Keep the line length at 88 characters for readability
target-version = ["py38"]  # Target Python 3.8 for compatibility
skip-string-normalization = false  # Normalize string quotes for consistency
include = '\.pyi?$'  # Only include Python files and ignore others
exclude = '''
/(
    \.git
    | __pycache__
    | build
    | dist
)/
'''  # Exclude certain directories to avoid formatting unnecessary files

[tool.mypy]
files = "ArtistX"
ignore_missing_imports = true
